--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,7 @@
     <div class="main-content">
         {{>header}}
 
-        <img class="portrait" src="/img/me.webp">
+        <img class="portrait" src="/img/me.jpg">
     </div>
 
     {{>footer}}
