--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,7 +14,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-
+        <p>This site was created by Joe. It uses data from Mapbox.com and weatherstack.com</p>
         <img class="portrait" src="/img/me.jpg">
     </div>
 
